# 42cursus

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
blog/: get_next_line.md  philosopher.md  pipex.md  push_swap.md  so_long.md
debug/: debug.c
inception/: Makefile
inception/srcs/: docker-compose.yml
libft/test/: main.c
manual_test/: test_libft.c
other_test/gnltest/: Makefile
other_test/libftwar/: deepthought  my_config.sh
piscine_reloaded/: ex00.sh  ex01.sh  ex02.sh  main  main.c
piscine_reloaded/ex03/: find_sh.sh
piscine_reloaded/ex06/: ft_print_alphabet.c
piscine_reloaded/ex07/: ft_print_numbers.c
piscine_reloaded/ex08/: ft_is_negative.c
piscine_reloaded/ex09/: ft_ft.c
piscine_reloaded/ex10/: ft_swap.c
piscine_reloaded/ex12/: ft_iterative_factorial.c
piscine_reloaded/ex13/: ft_recursive_factorial.c
piscine_reloaded/ex14/: ft_sqrt.c
piscine_reloaded/ex15/: ft_putstr.c
piscine_reloaded/ex17/: ft_strcmp.c
piscine_reloaded/ex18/: ft_print_params.c
piscine_reloaded/ex19/: ft_sort_params.c
piscine_reloaded/ex22/: ft_abs.h
piscine_reloaded/ex23/: ft_point.h
piscine_reloaded/ex24/: Makefile
piscine_reloaded/ex25/: ft_foreach.c
piscine_reloaded/ex26/: ft_count_if.c
piscine_reloaded/ex27/: Makefile
piscine_reloaded/test/: ex01.sh  ex02.sh  ex18.sh  ex19.sh  ex24.sh  ex27.sh  main  main.c
src/: Makefile
src/born2_be_root/: 1.sh  2.sh  3.sh  4.sh  5.sh  6.sh  7.sh
src/cpp05/: Bureaucrat.hpp  Makefile
src/ft_printf/: Makefile  ft_bzero.c  ft_memset.c  ft_printf.c  ft_printf.h  ft_printf_helper.h  str_helper.c  unsigned_helper.c
src/get_next_line/: get_next_line.c  get_next_line.h  get_next_line_utils.c
src/inception/: .gitignore  Makefile
src/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalpha.c  ft_isdigit.c  ft_isprint.c  ft_lstadd_back_bonus.c  ft_lstmap_bonus.c  ft_lstnew.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_strdup.c  ft_strjoin.c  (+9 more)
src/libft-unit-tests/: Makefile
(+367 files in other folders)
